Improved responsible menu. Added icon.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div>
 
 <div class="menu responsive">
-        <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+        <button onclick="myFunction()" class="dropbtn"></button>
         <div id="myDropdown" class="dropdown-content">
             <a href="#firstPage">Home</a>
             <a href="#secondPage">Experience</a>
