--- a/index_w3.html
+++ b/index_w3.html
@@ -15,6 +15,9 @@
 
     <link rel="stylesheet" href="css/w3.css">
 
+    <!-- Icons and other open source resources from  cdnjs.cloudflare.com-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 <body>
@@ -98,21 +101,50 @@
     </div>
 </div>
 
-<div class="w3-container w3-padding-64" id="Contact">
+<div class="w3-display-container" id="Contact">
+    <div class="w3-container w3-padding-64">
         <h4>Contact</h4>
 
-    <div class="w3-card-4" style="width:20%">
-        <img src="imgs/me_and_openhack_award.jpg" alt="Marcos holding his openhack prize" style="width:100%">
-        <div class="w3-container w3-center">
-            <p>Marcos holding his openhack prize</p>
-        </div>
-    </div>
 
-    <p>
-            Designed to fit to different screen sizes as well as tablet and mobile devices.
-            <br /><br /><br /><br /><br /><br />
-        </p>
-    <img src="imgs/tablets.png" alt="tablets" />
+        <form action="">
+            <div class="w3-half">
+            <div class="w3-row w3-section">
+                <div class="w3-col"><i class="w3-xxlarge fa fa-user"></i></div>
+                <div class="w3-rest">
+                    <input class="w3-input w3-border" name="first" type="text" placeholder="First Name">
+                </div>
+            </div>
+
+            <div class="w3-row w3-section">
+                <div class="w3-col"><i class="w3-xxlarge fa fa-envelope-o"></i></div>
+                <div class="w3-rest">
+                    <input class="w3-input w3-border" name="email" type="text" placeholder="Email">
+                </div>
+            </div>
+            </div>
+            <div class="w3-half">
+
+            <div class="w3-row w3-section">
+                <div class="w3-col"><i class="w3-xxlarge fa fa-phone"></i></div>
+                <div class="w3-rest">
+                    <input class="w3-input w3-border" name="phone" type="text" placeholder="Phone">
+                </div>
+            </div>
+
+            <div class="w3-row w3-section">
+                <div class="w3-col"><i class="w3-xxlarge fa fa-pencil"></i></div>
+                <div class="w3-rest">
+                    <input class="w3-input w3-border" name="message" type="text" placeholder="Subjet">
+                </div>
+            </div>
+            </div>
+
+            <textarea name="message" rows="10" cols="30" style="width: 100%;" placeholder="Hi Marcos, ..."></textarea>
+
+            <button class="w3-button w3-block w3-section w3-black w3-ripple w3-padding">Send</button>
+
+        </form>
+    </div>
 </div>
 
 
