--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 
-<div class="menu" id="menu">
+<div class="menu w3-top" id="menu">
     <ul>
         <li><a href="#Welcome">Home</a></li>
         <li><a href="#Experience">Second slide</a></li>
@@ -46,19 +46,67 @@
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 ++++++++++++++++++++++ Pages (Content) +++++++++++++++++++++++++++++++++++++++
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+<!--
+<div class="w3-display-container w3-padding-64" id="Welcome">
+    <div class="w3-container text_introduction w3-black">
+        <h4>Welcome!</h4>
+        <h5>I'm Marcos Bernal, a computer engineering student.</h5>
+    </div>
 
-<div class="w3-container w3-padding-64" id="Welcome">
-    <h1>fullPage.js</h1>
-    <input type="hidden" name="id" value="1" />
-    <p>Create Beautiful Fullscreen Scrolling Websites</p>
+    <div class="w3-container images_introduction">
+        <p>12 columns on a small screen, 8 on a medium screen, and 9 on a large screen.</p>
+    </div>
+</div>-->
+
+<div class="w3-display-container w3-padding-64" id="Welcome">
+    <div class="w3-row-padding w3-padding-32" style="margin-left: 5%; margin-right: 5%;">
+        <div class="w3-third w3-container w3-black" style="padding: 2%;margin-left: 5%; margin-right: 5%;height: 100%; background: rgba(176, 75, 80, 0.3);">
+            <div class="text_centered">
+            <h4>Welcome!</h4>
+            <h5>I'm Marcos Bernal, a computer engineering student.
+                Developing and creating new stuff and projects!</h5>
+            </div>
+        </div>
+
+        <div class="w3-rest w3-container">
+            <div class="container">
+                <img src="imgs/me_and_openhack_award.jpg" class="image" alt="Marcos holding his openhack prize">
+                <div class="overlay">
+                    <div class="text">Hello World</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <div class="w3-container w3-padding-64" id="Experience">
-    <p>Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</p>
+    <div class="w3-container w3-half">
+        <h4>Work Experience</h4>
+        <p>Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</p>
+        <p>Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.
+            Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.
+            Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.
+            Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</p>
+        <p>Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</p>
+    </div>
+
+    <div class="w3-container w3-half">
+        <h4>Education</h4>
+        <p>Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</p>
+        <p>Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.
+            Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.
+            Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.
+            Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</p>
+        <p>Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.
+            Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.
+            Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.
+            Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</p>
+    </div>
 </div>
 
 <div class="w3-display-container" id="AboutMe">
-    <div class="w3-container w3-padding-64 description">
+    <div class="w3-display-container w3-padding-64 description">
         <h4>Allow me to introduce myself...</h4>
 
         <p>I am Marcos Bernal España. I am a Spanish student currently finishing Master 2 in Data Science in the
@@ -141,7 +189,7 @@
 
             <textarea name="message" rows="10" cols="30" style="width: 100%;" placeholder="Hi Marcos, ..."></textarea>
 
-            <button class="w3-button w3-block w3-section w3-black w3-ripple w3-padding">Send</button>
+            <button class="w3-button w3-block w3-section w3-black w3-ripple w3-padding"><i class="fa fa-paper-plane"></i> Send Message!</button>
 
         </form>
     </div>
@@ -149,12 +197,12 @@
 
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-64">
+<footer class="w3-center w3-black w3-padding-24">
     <div class="w3-xlarge w3-section">
-        <i class="fa fa-github w3-hover-opacity"></i>
-        <i class="fa fa-linkedin w3-hover-opacity"></i>
+        <a href="https://github.com/MarcosBernal"><i class="fa fa-github w3-hover-opacity"></i></a>
+        <a href="https://es.linkedin.com/in/marcosbernalespana"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
     </div>
-    <p>W3CSS Theme Made By <a href="#">Marcos Bernal</a></p>
+    <p>W3CSS Theme Made By <a href="#" style="font-weight: bold; text-decoration: none;">Marcos Bernal</a></p>
 </footer>
 
 
