Added overlapped div. In the future it will replace partially and dinamically the text with a graph.

--- a/index.html
+++ b/index.html
@@ -159,10 +159,12 @@
                     Particularly, I love hockey and the one that I play is Field Hockey. Field hockey is usually misunderstood with the other variants of hockey i.e. Ice Hockey or Roller Hockey which are quite different.</p>
             </div>
             <div class="right_graph">
-
+                <img src="imgs/graph.jpg"/>
             </div>
         </div>
 
+        <button onclick="GetBox('right_graph')" style="height:50px; float:right;"></button>
+        <button onclick="GetBox('text')" style="background-color:green; height:50px; float:right;"></button>
 
     </div>
 </div>
