Improved dynamically overlap effect on the presentation part. Improvement of content, mouse control and graph remains

--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
     <meta name="keywords"  content="personal website, CV, marcos, bernal, contact, email" />
     <meta name="Resource-type" content="Document" />
 
+    <!-- Icons and other open source resources from  cdnjs.cloudflare.com-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" type="text/css" href="css/responsive_code.css"/>
     <link rel="stylesheet" type="text/css" href="css/personal_website.css"/>
     <script type="text/javascript" src="js/personal_website.js"></script>
+    <script type="text/javascript" src="js/personal_website_jquery.js"></script>
 
 
     <link rel="stylesheet" href="css/w3.css">
 
-    <!-- Icons and other open source resources from  cdnjs.cloudflare.com-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 
 </head>
@@ -145,7 +149,7 @@
     <div class="w3-display-container w3-padding-64 description">
         <h4>Allow me to introduce myself...</h4>
         <div class="switching_content" id="text">
-            <div class="left_text">
+            <div id="left_text">
                 <p>I am Marcos Bernal España. Ironically, you may guess from my last surname that you found another crazy Spaniard... well, you are not far from being right.
 
                     Anyway, if you want to know more about me, I am finishing the Master 2 in Data Science in the
@@ -158,7 +162,7 @@
                 <p>When I am not working nor developing/researching projects by my own, I like to hang out with friends, play some videogames and do all kind of sports.
                     Particularly, I love hockey and the one that I play is Field Hockey. Field hockey is usually misunderstood with the other variants of hockey i.e. Ice Hockey or Roller Hockey which are quite different.</p>
             </div>
-            <div class="right_graph">
+            <div id="right_graph">
                 <img src="imgs/graph.jpg"/>
             </div>
         </div>
