Added two buttons to about me for showing the graph and text directly. Added css and javascript effects.

--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
 <div class="w3-display-container" id="AboutMe">
     <div class="w3-display-container w3-padding-64 description">
         <h4>Allow me to introduce myself...</h4>
+        <div class="showing_button">
+            <img src="imgs/text_icon.svg" id="text_button"/>
+        </div>
         <div class="switching_content" id="text">
             <div id="left_text">
                 <p>I am Marcos Bernal España. Ironically, you may guess from my last surname that you found another crazy Spaniard... well, you are not far from being right.
@@ -171,9 +174,9 @@
                 <script type="text/javascript" src="js/visjs_network_graph.js"></script>
             </div>
         </div>
-
-        <button onclick="GetBox('right_graph')" style="height:50px; float:right;"></button>
-        <button onclick="GetBox('text')" style="background-color:green; height:50px; float:right;"></button>
+        <div class="showing_button">
+            <img src="imgs/graph_icon.svg" id="graph_button"/>
+        </div>
 
     </div>
 </div>
