Improved visualization in about me section

--- a/index.html
+++ b/index.html
@@ -155,17 +155,22 @@
         </div>
         <div class="switching_content" id="text">
             <div id="left_text">
-                <p>I am Marcos Bernal España. Ironically, you may guess from my last surname that you found another crazy Spaniard... well, you are not far from being right.
-
+                <img src="imgs/in_construction.jpg" align="right"/>
+                <p>I am Marcos Bernal España. Ironically, due to my last surname you may guess that you found another crazy Spaniard...
+                    well, you are not far from being right.
                     Anyway, if you want to know more about me, I am finishing the Master 2 in Data Science in the
-                    Technical University of Madrid.<br><br>
-                    My interest are quite large and mainly focused, but not limited, on computer engineering. I like robotics, software developing
+                    Technical University of Madrid.</p>
+
+                <p> My interest are quite large and mainly focused, but not limited, on computer engineering. I like robotics, software developing
                     (including videogames :P), security and networking. I like to learn something useful everyday and I do my best to achieve it.</p>
+                <img src="imgs/in_construction.jpg" align="left"/>
                 <p>If I had to sum up myself, I would say that I am a problem solving person. I really like easy problems and
                     medium ones, but hard problems are not big deal since one can split them and
                     have several small lovely problems instead!</p>
                 <p>When I am not working nor developing/researching projects by my own, I like to hang out with friends, play some videogames and do all kind of sports.
-                    Particularly, I love hockey and the one that I play is Field Hockey. Field hockey is usually misunderstood with the other variants of hockey i.e. Ice Hockey or Roller Hockey which are quite different.</p>
+                    Particularly, I love hockey and the one that I play is Field Hockey.
+                    Field hockey is usually misunderstood with the other variants of hockey i.e. Ice Hockey or Roller Hockey which are quite different.</p>
+
             </div>
             <div id="divider"></div>
             <div id="right_graph">
