--- a/index.html
+++ b/index.html
@@ -100,6 +100,25 @@
                     <div class="text">Hello World</div>
                 </div>
             </div>
+
+            <div class="box_container">
+                <div class="infobox">
+                    <div class="inside_box">
+                        <div class="topbar_inside_box"></div>
+                        <div class="leftbar_inside_box"></div>
+                        <div class="rightbar_inside_box"></div>
+                        <div class="bottombar_inside_box"></div>
+                        <div class="cross">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="infobox"></div>
+                <div class="infobox"></div>
+                <div class="infobox"></div>
+                <div class="infobox"></div>
+                <div class="infobox"></div>
+            </div>
         </div>
     </div>
 
